Add worker social profile links
